src/objects/Player_Team_Relationship__c.object
<CustomObject>
    <description>junction object to track player to teams and historical salary paid</description>
    <fields>
        <fullName>Games_Played__c</fullName>
        <label>Games Played</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipName>Salaries_over_time</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points_Per_Game__c</fullName>
        <formula>Points__c /  Games_Played__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Per Game</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipName>Salaries_over_time</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Player-Team-Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Player__c</columns>
        <columns>Games_Played__c</columns>
        <columns>Points__c</columns>
        <columns>Team__c</columns>
        <columns>Season__c</columns>
        <columns>Salary__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>All 2017</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Player-Team-Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player-Team-Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>